fix(components): improved dashboard styles on mobile and tablet

--- a/src/scss/components/Dashboard/_dashboard.scss
+++ b/src/scss/components/Dashboard/_dashboard.scss
@@ -134,15 +134,17 @@ $breakpoint-laptop: 1400px;
 }
 
 .dashboard-right-flat-containers {
-  width: 90% !important;
+  width: 100% !important;
+  padding: 24px 0px !important;
   @media (max-width: $breakpoint-tablet) {
     margin: 0;
     flex-grow: 1;
-    width: 27% !important;
+    width: 45% !important;
+    padding: 24px 16px !important;
     border-bottom: 1px solid rgba(189, 189, 189, 0.5) !important;
   }
   @media (max-width: $breakpoint-mobile) {
-    padding: 16px !important;
+    padding: 16px 0px !important;
     width: 100% !important;
     margin-top: 0px;
   }
